<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.Marketplace_PlayerInventory_Startup"
    tools:showIn="@layout/activity_marketplace__player_inventory__startup">


    <Button
        android:id="@+id/back_button"
        android:layout_width="77dp"
        android:layout_height="37dp"
        android:layout_marginStart="4sp"
        android:layout_marginTop="4sp"
        android:text="@string/Back"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Marketplace_Player_Credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12sp"
        android:text="@string/Credits"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Marketplace_Player_Credits_Num"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/zero"
        android:gravity="center_horizontal"
        android:background="#e1ef11"
        app:layout_constraintStart_toEndOf="@+id/Marketplace_Player_Credits"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Marketplace_Player_Inventory_Space"
        android:layout_width="137dp"
        android:layout_height="23dp"
        android:layout_marginStart="4sp"
        android:layout_marginTop="12dp"
        android:text="@string/Inventory_Space_Left"
        app:layout_constraintStart_toEndOf="@+id/Marketplace_Player_Credits_Num"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/zero"
        android:gravity="center_horizontal"
        android:background="#e1ef11"
        app:layout_constraintStart_toEndOf="@+id/Marketplace_Player_Inventory_Space"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SellMarketplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:ems="10"

        android:gravity="center_horizontal"
        android:textColor="#ffff"
        android:text="@string/Player_Inventory"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textFontWeight="20"

        android:background="#000000"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Market_Items_Owned_Title"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:text="@string/Items_Owned"
        android:textColorHighlight="@color/colorPrimary"
        android:textFontWeight="20"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/Market_Items_Amount"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SellMarketplace" />

    <TextView
        android:id="@+id/Market_Items_Amount"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/Amount"
        android:textColorHighlight="@color/colorPrimary"
        android:textFontWeight="20"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SellMarketplace" />

    <TextView
        android:id="@+id/Item_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/Water"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Owned_Title" />

    <TextView
        android:id="@+id/Item_Water_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Furs_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_water"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/Item_Furs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Furs"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_water" />

    <TextView
        android:id="@+id/Item_Furs_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Food_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Furs"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Item_Food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Food"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Furs" />

    <TextView
        android:id="@+id/Item_Food_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Ore_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Food"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/Item_Ore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Ore"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Food" />

    <TextView
        android:id="@+id/Item_Ore_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Games_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Ore"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.986" />

    <TextView
        android:id="@+id/Item_Games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Games"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Ore" />

    <TextView
        android:id="@+id/Item_Games_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Firearms_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Games"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Item_Firearms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Firearms"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Games" />

    <TextView
        android:id="@+id/Item_Firearms_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Medicine_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Firearms"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Item_Medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Medicine"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Firearms" />

    <TextView
        android:id="@+id/Item_Medicine_Amount_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Machines_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Medicine"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.957" />

    <TextView
        android:id="@+id/Item_Machines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Machines"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Medicine" />

    <TextView
        android:id="@+id/Item_Machines_Amount_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Narcotics_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Machines"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.963" />

    <TextView
        android:id="@+id/Item_Narcotics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Narcotics"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Machines" />

    <TextView
        android:id="@+id/Item_Narcotics_Amount_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="368dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Item_Robots_Amount_counter"
        app:layout_constraintStart_toEndOf="@+id/Item_Narcotics"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Item_Robots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Robots"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_Narcotics" />

    <TextView
        android:id="@+id/Item_Robots_Amount_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="408dp"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/Item_Robots"
        app:layout_constraintTop_toBottomOf="@+id/Market_Items_Amount" />

</android.support.constraint.ConstraintLayout>